Make clear search button visible, and fix weird margin in top left corner

--- a/src/ui/layout/layout.scss
+++ b/src/ui/layout/layout.scss
@@ -250,6 +250,9 @@
     align-items: start;
     $p: $interiorMarginSm;
     padding-left: $p; padding-right: $p;
+    body.mobile & { // Fixes weird gap in mobile status area
+      margin-right: 0px;
+    }
   }
 
   &__indicators {
